--- a/AppCoderFinal/templates/AppCoderFinal/inicio.html
+++ b/AppCoderFinal/templates/AppCoderFinal/inicio.html
@@ -6,5 +6,7 @@
 {% block contenidoQueCambia %}
 
     <p>Contenido párticular de Inicio</p>
+
+    <h1> {{ mensaje }} </h1>
     
 {% endblock contenidoQueCambia %}
