--- a/AppCoderFinal/templates/AppCoderFinal/padre.html
+++ b/AppCoderFinal/templates/AppCoderFinal/padre.html
@@ -34,10 +34,10 @@
         <header class="masthead">
             <div class="container position-relative">
                 <div class="row justify-content-center">
-                    <div class="col-xl-6">
+                    <div class="col-l-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Proyecto Final Python usando Django, Boostrap, Herencias en Templates y Formularios</h1>
+                            <h1 class="mb-3">Proyecto Final Python usando Django, Boostrap, Herencias en Templates y Formularios</h1>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
@@ -46,12 +46,12 @@
                             <!-- To make this form functional, sign up at-->
                             <!-- https://startbootstrap.com/solution/contact-forms-->
                             <!-- to get an API token!-->
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </header>
-   
+
         {% block contenidoQueCambia %}
           
         {% endblock contenidoQueCambia %}
