--- a/AppCoderFinal/templates/AppCoderFinal/editarPerfil.html
+++ b/AppCoderFinal/templates/AppCoderFinal/editarPerfil.html
@@ -11,13 +11,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Logout</title>
+        <title>Editar Perfil</title>
     </head>
     <body>
         
-        <h1> Te has deslogueado... </h1>
+        <h1>Formulario - Editar Perfil</h1>
+        <h1>De {{ usuario }} </h1>
+        <br>
+        <form action="" method="post">{% csrf_token %}
+
+            <table>
+                {{ miFormulario.as_table }}
+            </table>
+
+            <button type="submit"> Enviar </button>
+        </form>
+        <br>
 
     </body>
     </html>
-
+    
 {% endblock contenidoQueCambia %}
