--- a/AppCoderFinal/templates/AppCoderFinal/inicio.html
+++ b/AppCoderFinal/templates/AppCoderFinal/inicio.html
@@ -8,5 +8,10 @@
     <p>Contenido párticular de Inicio</p>
 
     <h1> {{ mensaje }} </h1>
+
+    <div>
+        <img height="150px" src="{{ url }}" alt="avatar">
+        <p>Que bueno verte de nuevo</p>
+    </div>
     
 {% endblock contenidoQueCambia %}
