--- a/AppCoderFinal/templates/AppCoderFinal/padre.html
+++ b/AppCoderFinal/templates/AppCoderFinal/padre.html
@@ -27,7 +27,19 @@
                 <a class="navbar-brand" href="{% url 'destinos' %}">Destinos</a>
                 <a class="navbar-brand" href="{% url 'alojamientos' %}">Alojamientos</a>
                 <a class="navbar-brand" href="{% url 'excursiones' %}">Excursiones</a>
-                <!-- <a class="btn btn-primary" href="#signup">Sign Up</a> -->
+                
+                {% if not request.user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>    
+                {% endif %}
+                    
+                
+                {% if request.user.is_authenticated %}
+                <p class="text-muted small mb-4 mb-lg-0"> Hola {{ user.username }}! </p>
+                <a class="btn btn-primary" href="{% url 'Logout' %}">Salir</a> 
+                {% endif %}
+                    
+
+
             </div>
         </nav>
         <!-- Masthead-->
