--- a/AppCoderFinal/templates/AppCoderFinal/editarPerfil.html
+++ b/AppCoderFinal/templates/AppCoderFinal/editarPerfil.html
@@ -16,7 +16,7 @@
     <body>
         
         <h1>Formulario - Editar Perfil</h1>
-        <h1>De {{ usuario }} </h1>
+        <h1>De: {{ usuario }} </h1>
         <br>
         <form action="" method="post">{% csrf_token %}
 
@@ -27,6 +27,12 @@
             <button type="submit"> Enviar </button>
         </form>
         <br>
+        <br>
+        <br>
+
+        <p>
+            <a href="{% url 'inicio' %}"><button type="button" class="btn btn-primary btn-sm">Volver</button></a>
+        </p>
 
     </body>
     </html>
