--- a/AppCoderFinal/templates/AppCoderFinal/excursion_update.html
+++ b/AppCoderFinal/templates/AppCoderFinal/excursion_update.html
@@ -11,30 +11,29 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Registro</title>
+        <title>Excursion Formulario</title>
     </head>
     <body>
-        
-    
+        <center>
             <br>
-            <form action="" method="post">{% csrf_token %}
+            <form method="post">{% csrf_token %}
 
                 {{ form.as_p }}
-
-                <button type="submit"> Registrate!!! </button>
+    
+                <input type="submit" value="Guardar" />
             </form>
+        
             <br>
             <br>
             <br>
-
-        <p>
-            <a href="{% url 'inicio' %}"><button type="button" class="btn btn-primary btn-sm">Volver</button></a>
-        </p>
-
-
+            <p>
+                <a href="{% url 'ListEXCU' %}"><button type="button" class="btn btn-primary btn-sm">Volver</button></a>
+            </p>
+        </center>
 
 
     </body>
     </html>
+
 
 {% endblock contenidoQueCambia %}
