--- a/AppCoderFinal/templates/AppCoderFinal/padre.html
+++ b/AppCoderFinal/templates/AppCoderFinal/padre.html
@@ -17,6 +17,11 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'AppCoderFinal/css/styles.css' %}" rel="stylesheet" />
+
+        <!-- Para poder agregar dropdown menus)-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <!-- Navigation-->
@@ -24,18 +29,48 @@
             <div class="container">
                 <!-- <a class="navbar-brand" href="#!">Start Bootstrap</a> -->
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a> 
+
+                
+                {% if not request.user.is_authenticated %}
                 <a class="navbar-brand" href="{% url 'destinos' %}">Destinos</a>
                 <a class="navbar-brand" href="{% url 'alojamientos' %}">Alojamientos</a>
                 <a class="navbar-brand" href="{% url 'excursiones' %}">Excursiones</a>
-                
-                {% if not request.user.is_authenticated %}
-                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>    
+                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                <a class="btn btn-info" href="{% url 'Registro' %}">Registrate!</a>    
                 {% endif %}
                     
                 
                 {% if request.user.is_authenticated %}
+                <a class="navbar-brand" href="{% url 'List' %}">Destinos</a>
+                <a class="navbar-brand" href="{% url 'ListALJ' %}">Alojamientos</a>
+                <a class="navbar-brand" href="{% url 'ListEXCU' %}">Excursiones</a>
                 <p class="text-muted small mb-4 mb-lg-0"> Hola {{ user.username }}! </p>
-                <a class="btn btn-primary" href="{% url 'Logout' %}">Salir</a> 
+                
+
+                <!-- NOTA: Primer Drop Down -->
+                <!-- <div class="btn-group">
+                    <button type="button" class="btn btn-primary">Usuario</button>
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="{% url 'EditarPerfil' %}">Editar Usuario</a></li>
+                      <li><a href="{% url 'Logout' %}">Salir</a></li>
+                    </ul>
+                </div> -->
+                
+
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      User
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="{% url 'EditarPerfil' %}">Editar Usuario</a>
+                      <a class="dropdown-item" href="{% url 'Logout' %}">Salir</a>
+                    </div>
+                </div>
+
+                <!-- <a class="btn btn-primary" href="{% url 'Logout' %}">Salir</a>  -->
                 {% endif %}
                     
 
